# PulseVortex

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  Run_Monitors.bat  Run_Monitors.vbs  backtest_ticks.py  check_tp_sl_hits.py  dash_app.py  environment.yml  monitor_gui.py  monitor_gui_settings.json  pyproject.toml  realtime_check_tp_sl_hits.py  requirements-dev.txt  requirements.txt  run_monitor_gui.pyw  timelapse_backtest_csv.py  timelapse_setups.py
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  issue-automation.yml  release.yml  scheduled.yml
assets/: custom.css
monitor/: chart.py  config.py  db.py  logs.py  mt5_client.py  proc.py  quiet_hours.py  realtime_exit.py  redis_ticks.py  web_db.py
mql5/: ClickHouseTicksEA.mq5  README.md  create_ticks_table.sql
rust_rabbitmq_dll/: Cargo.toml
scripts/: README.md  cleanup_tp_sl_setup_state.py  delete_duplicate_setups.py  find_duplicated_bins.py  find_duplicated_bins_correct.py  find_missing_hits.py  fix_rrr_values.py  insert_restore_to_setups.py  round_restore_table.py  verify_rrr_calculation.py
src/monitor/: __init__.py
src/monitor/cli/: __init__.py  hit_checker.py  setup_analyzer.py
src/monitor/core/: __init__.py  config.py  db.py  domain.py  mt5_client.py  quiet_hours.py  symbols.py
src/monitor/gui/: __init__.py  main.py
tests/: test_check_tp_sl_hits.py  test_config.py  test_db.py  test_db_helpers.py  test_db_state.py  test_domain.py  test_hit_checker_edge_cases.py  test_hit_checker_helpers.py  test_hit_checker_integration.py  test_live_bin_filters.py  test_mt5_client.py  test_mt5_client_helpers.py  test_quiet_hours.py  test_realtime_exit.py  test_setup_analyzer_analysis.py  test_setup_analyzer_cli_db.py  test_setup_analyzer_edge_cases.py  test_setup_analyzer_helpers.py  test_setup_analyzer_main.py  test_spread_adjustment.py  test_symbols.py  test_timelapse_setups.py  test_tp_sl_state.py
