[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor"
version = "0.1.0"
description = "Trade Setup Analyzer & Monitor - Comprehensive Python application for automated trade setup detection and monitoring via MetaTrader 5"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PulseVortex Team"}
]
maintainers = [
    {name = "PulseVortex Team"}
]
keywords = ["trading", "forex", "crypto", "metatrader", "technical-analysis", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
]
requires-python = ">=3.8"
dependencies = [
    "MetaTrader5>=5.0.45",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "coverage>=6.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "safety>=2.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/firetee13/monitor"
Repository = "https://github.com/firetee13/monitor"
Documentation = "https://github.com/firetee13/monitor/blob/main/README.md"
"Bug Tracker" = "https://github.com/firetee13/monitor/issues"

[project.scripts]
monitor-setup = "monitor.cli.setup_analyzer:main"
monitor-hits = "monitor.cli.hit_checker:main"
monitor-gui = "monitor.gui.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
monitor = ["gui/settings.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
addopts = " --cov=src  --cov-report=term-missing --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "src/monitor/cli/*",
    "src/monitor/core/mt5_client.py",
    "src/monitor/gui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["monitor"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "MetaTrader5.*",
    "matplotlib.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "E501",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D202",
    "D205",
    "D400",
    "D401",
    "E302",
    "E305",
    "F401",
    "E231",
    "W503",
    "E402",
    "E713",
    "E702",
    "E226",
    "E541",
    "F541",
]
